# prime-system.ir

./: .gitignore  README.md  manage.py  pyproject.toml
PrimeSystem/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
PrimeSystem/custom_settings/: ckeditor_settings.py  email_settings.py  jazzmin_settings.py  kavenegar_settings.py
apps/account_app/: admin.py  apps.py  forms.py  managers.py  mixins.py  models.py  urls.py  views.py
apps/account_app/migrations/: 0001_initial.py  0002_alter_customuser_email.py
apps/blog_app/: admin.py  apps.py  models.py  sitemaps.py  urls.py  views.py
apps/blog_app/migrations/: 0001_initial.py
apps/cart_app/: admin.py  apps.py  cart_module.py  forms.py  models.py  urls.py  views.py
apps/cart_app/migrations/: 0001_initial.py  0002_remove_userorder_reference_id_userorder_order_uuid.py  (+1 more)
apps/contact_app/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
apps/home_app/: admin.py  apps.py  models.py  sitemaps.py  urls.py  views.py
apps/paymentGateway_app/: apps.py  urls.py  views.py
apps/product_app/: admin.py  api.py  apps.py  models.py  serializers.py  urls.py  views.py
assets/css/: style.css
assets/js/: app.js
context_processors/: context_processors.py
hitcount/: managers.py  models.py  settings.py  views.py
templates/: 404.html  base.html
templates/includes/: cart.html  category.html  footer.html  header.html  menu.html  meta_tags.html  mobile_category.html  mobile_footer.html
utils/: abstract_models.py  email.py  encrypt_data.py  mixins.py  sms.py  validators.py
(+28 files in other folders)
